added disqus comments

--- a/site/linux/android_device/index.html
+++ b/site/linux/android_device/index.html
@@ -568,6 +568,22 @@ sudo killall adb
                 
 
 
+  <h2 id="__comments">Comments</h2>
+  <div id="disqus_thread"></div>
+  <script>
+    var disqus_config = function () {
+      this.page.url = "https://www.asdhillon.com/linux/android_device/";
+      this.page.identifier =
+        "/linux/android_device/";
+    };
+    (function() {
+      var d = document, s = d.createElement("script");
+      s.src = "//amardhillon.disqus.com/embed.js";
+      s.setAttribute("data-timestamp", +new Date());
+      (d.head || d.body).appendChild(s);
+    })();
+  </script>
+
               
             </article>
           </div>
