--- a/site/maven/downgrade_maven/index.html
+++ b/site/maven/downgrade_maven/index.html
@@ -531,6 +531,22 @@ brew link --overwrite maven@3.0
                 
 
 
+  <h2 id="__comments">Comments</h2>
+  <div id="disqus_thread"></div>
+  <script>
+    var disqus_config = function () {
+      this.page.url = "https://www.asdhillon.com/maven/downgrade_maven/";
+      this.page.identifier =
+        "/maven/downgrade_maven/";
+    };
+    (function() {
+      var d = document, s = d.createElement("script");
+      s.src = "//amardhillon.disqus.com/embed.js";
+      s.setAttribute("data-timestamp", +new Date());
+      (d.head || d.body).appendChild(s);
+    })();
+  </script>
+
               
             </article>
           </div>
