--- a/site/mysql/mysql_basics/index.html
+++ b/site/mysql/mysql_basics/index.html
@@ -560,6 +560,22 @@ mysql.server stop   <span class="c1"># stop the server</span>
                 
 
 
+  <h2 id="__comments">Comments</h2>
+  <div id="disqus_thread"></div>
+  <script>
+    var disqus_config = function () {
+      this.page.url = "https://www.asdhillon.com/mysql/mysql_basics/";
+      this.page.identifier =
+        "/mysql/mysql_basics/";
+    };
+    (function() {
+      var d = document, s = d.createElement("script");
+      s.src = "//amardhillon.disqus.com/embed.js";
+      s.setAttribute("data-timestamp", +new Date());
+      (d.head || d.body).appendChild(s);
+    })();
+  </script>
+
               
             </article>
           </div>
