--- a/site/blogs/covidPrep/index.html
+++ b/site/blogs/covidPrep/index.html
@@ -538,6 +538,22 @@
                 
 
 
+  <h2 id="__comments">Comments</h2>
+  <div id="disqus_thread"></div>
+  <script>
+    var disqus_config = function () {
+      this.page.url = "https://www.asdhillon.com/blogs/covidPrep/";
+      this.page.identifier =
+        "/blogs/covidPrep/";
+    };
+    (function() {
+      var d = document, s = d.createElement("script");
+      s.src = "//amardhillon.disqus.com/embed.js";
+      s.setAttribute("data-timestamp", +new Date());
+      (d.head || d.body).appendChild(s);
+    })();
+  </script>
+
               
             </article>
           </div>
