updated the disqus id

--- a/site/mysql/JdbcStatements/index.html
+++ b/site/mysql/JdbcStatements/index.html
@@ -652,7 +652,7 @@ The actual value is set before executing the query at runtime by using the vario
     };
     (function() {
       var d = document, s = d.createElement("script");
-      s.src = "//amardhillon.disqus.com/embed.js";
+      s.src = "//amardhillon-com-1.disqus.com/embed.js";
       s.setAttribute("data-timestamp", +new Date());
       (d.head || d.body).appendChild(s);
     })();
