--- a/site/blogs/gitAndCpanel/index.html
+++ b/site/blogs/gitAndCpanel/index.html
@@ -683,7 +683,7 @@ ls -a
     };
     (function() {
       var d = document, s = d.createElement("script");
-      s.src = "//amardhillon.disqus.com/embed.js";
+      s.src = "//amardhillon-com-1.disqus.com/embed.js";
       s.setAttribute("data-timestamp", +new Date());
       (d.head || d.body).appendChild(s);
     })();
