--- a/site/linux/android_device/index.html
+++ b/site/linux/android_device/index.html
@@ -578,7 +578,7 @@ sudo killall adb
     };
     (function() {
       var d = document, s = d.createElement("script");
-      s.src = "//amardhillon.disqus.com/embed.js";
+      s.src = "//amardhillon-com-1.disqus.com/embed.js";
       s.setAttribute("data-timestamp", +new Date());
       (d.head || d.body).appendChild(s);
     })();
