--- a/site/linux/commands/index.html
+++ b/site/linux/commands/index.html
@@ -1535,7 +1535,7 @@ w command in a terminal window</p>
     };
     (function() {
       var d = document, s = d.createElement("script");
-      s.src = "//amardhillon.disqus.com/embed.js";
+      s.src = "//amardhillon-com-1.disqus.com/embed.js";
       s.setAttribute("data-timestamp", +new Date());
       (d.head || d.body).appendChild(s);
     })();
