--- a/site/maven/downgrade_maven/index.html
+++ b/site/maven/downgrade_maven/index.html
@@ -541,7 +541,7 @@ brew link --overwrite maven@3.0
     };
     (function() {
       var d = document, s = d.createElement("script");
-      s.src = "//amardhillon.disqus.com/embed.js";
+      s.src = "//amardhillon-com-1.disqus.com/embed.js";
       s.setAttribute("data-timestamp", +new Date());
       (d.head || d.body).appendChild(s);
     })();
