--- a/site/mysql/mysql_basics/index.html
+++ b/site/mysql/mysql_basics/index.html
@@ -570,7 +570,7 @@ mysql.server stop   <span class="c1"># stop the server</span>
     };
     (function() {
       var d = document, s = d.createElement("script");
-      s.src = "//amardhillon.disqus.com/embed.js";
+      s.src = "//amardhillon-com-1.disqus.com/embed.js";
       s.setAttribute("data-timestamp", +new Date());
       (d.head || d.body).appendChild(s);
     })();
