--- a/site/wget/wget/index.html
+++ b/site/wget/wget/index.html
@@ -648,7 +648,7 @@
     };
     (function() {
       var d = document, s = d.createElement("script");
-      s.src = "//amardhillon.disqus.com/embed.js";
+      s.src = "//amardhillon-com-1.disqus.com/embed.js";
       s.setAttribute("data-timestamp", +new Date());
       (d.head || d.body).appendChild(s);
     })();
