--- a/site/wso2/jms/index.html
+++ b/site/wso2/jms/index.html
@@ -846,7 +846,7 @@ Now add the logger and send some events to <code>stream A</code>. If all went ri
     };
     (function() {
       var d = document, s = d.createElement("script");
-      s.src = "//amardhillon.disqus.com/embed.js";
+      s.src = "//amardhillon-com-1.disqus.com/embed.js";
       s.setAttribute("data-timestamp", +new Date());
       (d.head || d.body).appendChild(s);
     })();
