--- a/site/blogs/covidPrep/index.html
+++ b/site/blogs/covidPrep/index.html
@@ -515,7 +515,7 @@
 <p>Drink green tea 🍵, ginger-lemon, ginger-turmeric tea. If you don't have those then, heat some water and add freshly cut ginger, some garlic, honey to it and drink several times a day.</p>
 </li>
 <li>
-<p>Hame some hot soups 🍜</p>
+<p>Have some hot soups 🍜</p>
 </li>
 <li>
 <p>Gargle with hot salt water 2-3 times a day and especially before you go to bed. Your water kettle will come in handy for this.</p>
